@@ -130,7 +130,7 @@ impl Decryptor {
             cipher.apply_keystream(&mut data);
 
             format::verify_signature(&decryptor.dk.mac(), &input, &decryptor.signature.as_bytes())
-                .map_err(Error::InvalidSignature)?;
+                .map_err(Error::InvalidMac)?;
 
             buf.copy_from_slice(&data);
             Ok(())
