@@ -23,6 +23,10 @@ toc::[]
 * Split `Params` from `format.rs` ({pull-request-url}/38[#38])
 * Use `StdRng` instead of `ChaCha20Rng` to generate salt
   ({pull-request-url}/38[#38])
+* Rename `Error::InvalidHeaderSignature` to `Error::InvalidHeaderMac`
+  ({pull-request-url}/40[#40])
+* Rename `Error::InvalidSignature` to `Error::InvalidMac`
+  ({pull-request-url}/40[#40])
 
 == {compare-url}/v0.5.3\...v0.6.0[0.6.0] - 2023-08-09
 
